fix layout bug

--- a/public/style.css
+++ b/public/style.css
@@ -28,70 +28,6 @@ h1 {
 
 
 
-
-/*animation*/
-
-@-webkit-keyframes fadeIn {
-    from {
-        opacity: 0;
-        opacity: 1\9;
-        /* IE9 only */
-    }
-    to {
-        opacity: 1;
-    }
-}
-
-@-moz-keyframes fadeIn {
-    from {
-        opacity: 0;
-        opacity: 1\9;
-        /* IE9 only */
-    }
-    to {
-        opacity: 1;
-    }
-}
-
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-        opacity: 1\9;
-        /* IE9 only */
-    }
-    to {
-        opacity: 1;
-    }
-}
-
-.fade-in {
-    opacity: 0;
-    /* make things invisible upon start */
-    -webkit-animation: fadeIn ease-in 1;
-    /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
-    -moz-animation: fadeIn ease-in 1;
-    animation: fadeIn ease-in 1;
-    -webkit-animation-fill-mode: forwards;
-    /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
-    -moz-animation-fill-mode: forwards;
-    animation-fill-mode: forwards;
-    -webkit-animation-duration: 1s;
-    -moz-animation-duration: 1s;
-    animation-duration: 1s;
-}
-
-.fade-in.one {
-    -webkit-animation-delay: 0.7s;
-    -moz-animation-delay: 0.7s;
-    animation-delay: 0.7s;
-}
-
-.fade-in.three {
-    -webkit-animation-delay: 1.6s;
-    -moz-animation-delay: 1.6s;
-    animation-delay: 1.6s;
-}
-
 #eventHere li:nth-child(odd) {
     background: #eee;
 }
@@ -147,39 +83,33 @@ div.search {
     transition: 0.2s
 }
 
-.popup {
-    height: 50%;
-    background: #0E5DA2;
-    margin-top: -2px;
-    width: 50%
-}
-
-div.popup {
-    font-size: 1.5em;
-    opacity: 0.8;
-    color: white;
-    padding: -20px;
-    border: 20px solid transparent;
-    margin: 10px
-}
 
 #mapid {
-    padding-top: 100px;
-    height: 90%;
-    width: 50%;
+    height: 80%;
     float: right;
 }
 
 #suggestionsBox {
     height: 90%;
-    width: 25%;
-    position: absolute;
-    background: turquoise;
-    float:left;
-    margin-top: 30px;
+    background: #684756;
+    border-radius: 3px;
+    margin-top: 0;
     overflow-y: scroll;
+    color: white;
 }
 
+
+.content {
+  height:100vh;
+  display:none;
+  margin-right: 0 !important;
+  float: left;
+}
+
+.main {
+  height:100vh;
+  width: 100%;
+}
 /*#chatArea {
   width:30%;
   float:left;
@@ -192,10 +122,16 @@ span {
 #success{
   display: none;
   float: right;
-  margin-left: 450px;
+  background: #114B5F;
+  padding: 0 100px;
+  color: white;
 }
 
 .well {
   overflow-y: scroll;
   max-height: 150px;
+}
+
+#searchBar {
+  color: black;
 }
